--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@ body{
   font-family: "Roboto", sans-serif;
 }
 .container{
-  width:$width-large;
+  //width:$width-large;
   margin: 0 auto;
 }
 .card{
