--- a/css/style.scss
+++ b/css/style.scss
@@ -17,7 +17,7 @@ body{
 .card{
    position: relative;
    background-color: $color-light;
-   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14);
+   box-shadow: 0 2px 8px 1px rgba(0,0,0,0.14);
    border-radius: 3px;
    margin: 50px auto;
    max-width:480px;
