--- a/css/style.css
+++ b/css/style.css
@@ -9,14 +9,13 @@ body {
 }
 
 .container {
-  width: 960px;
   margin: 0 auto;
 }
 
 .card {
   position: relative;
   background-color: #ffffff;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+  box-shadow: 0 2px 8px 1px rgba(0, 0, 0, 0.14);
   border-radius: 3px;
   margin: 50px auto;
   max-width: 480px;
